# Calcutron

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  PACKAGING_SUMMARY.md  Packager.toml  README.md  build_all_packages.bat  bundle.wixobj  calcutron-installer.wixpdb  eslint.config.js  expanded.rs  package-lock.json  package.json  packaging_instructions.md  pnpm-lock.yaml  vite.config.ts
.cursor/: changelog.md  scratchpad.md
.cursor/rules/: docs.mdc  global.mdc
.cursor/rules/gui/: iced.mdc
.cursor/rules/packaging/: distribution.mdc
.cursor/rules/rust/: core.mdc  dependencies.mdc  testing.mdc
.kiro/steering/: docs.md  global.md
.kiro/steering/gui/: iced.md
.kiro/steering/packaging/: distribution.md
.kiro/steering/rust/: core.md  dependencies.md  testing.md
.qoder/rules/: clean-codef.md  rust.md
.svelte-kit/: ambient.d.ts
.svelte-kit/__package__/: Calculator.svelte
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/immutable/chunks/: 5k-Nodat.js  D0Dfl-Y7.js
.svelte-kit/output/client/_app/immutable/entry/: start.vIcuJMnC.js
.svelte-kit/output/client/_app/immutable/nodes/: 1.Dtl1MSzh.js  2.B83KjLdl.js
.svelte-kit/output/server/: manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/_app/immutable/assets/: _layout.jgMZfuz0.css  _page.Bf4wXO1i.css
.svelte-kit/output/server/chunks/: index.js  internal.js
.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
.svelte-kit/output/server/entries/pages/: _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
Fonts/bold/: selection.json  style.css
Fonts/duotone/: selection.json  style.css
Fonts/fill/: selection.json
Fonts/light/: selection.json  style.css
Fonts/regular/: selection.json
Fonts/thin/: selection.json  style.css
src/: app.html  app.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: buttons.rs  mod.rs
src/components/views/: always_on_top_button.rs  button_grid.rs  display.rs  layout.rs  list_button.rs  mod.rs  mode_row.rs  mode_text.rs
src/helpers/: calculation.rs  formatting.rs  mod.rs
src/lib/: Calculator.svelte
src/models/: calcutron.rs  message.rs  mod.rs  operation.rs
src/models/update_impl/: backspace_handler.rs  clear_handler.rs  decimal_handler.rs  digit_handler.rs  equals_handler.rs  mod.rs  operation_handler.rs  special_operation_handler.rs  window_handler.rs
src/routes/: +page.svelte
static/app_icons/: icon.icns
wix/: License.rtf  bundle.wxs  main.wxs
