[package]
name = "calcutron"
version = "0.1.0"
edition = "2024"
authors = ["FerrisMind"]
description = "Calculator implemented in Rust with Iced GUI like Microsoft Calculator UI"
repository = "https://github.com/yourusername/calcutron"
license = "MIT"
keywords = ["calcutron", "rpn", "gui", "iced"]
categories = ["gui"]

[lib]
name = "calcutron"
path = "src/lib.rs"

[[bin]]
name = "calcutron"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13.1", features = ["svg"] }

[package.metadata.packager]