[package]
name = "calcutron"
version = "1.0.0"
description = "Современный кроссплатформенный калькулятор"
authors = ["Calcutron Team"]
license = "MIT"
repository = "https://github.com/calcutron/calcutron"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "calcutron"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"

# Оптимизация для релизной сборки
[profile.release]
opt-level = "z"     # Оптимизация размера
lto = true          # Link Time Optimization
codegen-units = 1   # Лучшая оптимизация
panic = "abort"     # Уменьшение размера
strip = true        # Удаление отладочной информации
